# taby_final

./: .gitattributes  .gitignore  AppIconView.swift  CalculatorApp.swift  ContentView.swift  PUSH_TO_GITHUB.bat  PUSH_TO_GITHUB.sh  README.md  SETUP_GITHUB.md  index.html  main.yml  package-lock.json  package.json  start.bat  start.sh  swift.yml  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
electron/: main.js  preload.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adblock.rs  commands.rs  importer.rs  lib.rs  main.rs  sync.rs  universal_viewer.rs  updater.rs  vault.rs
src/components/Apps/: TabyApiTester.jsx  TabyAppsHub.jsx  TabyDownloadManager.jsx  TabyMeet.jsx  TabyNotes.jsx  TabyOffice.jsx  TabyPdfViewer.jsx  TabySync.jsx  TabyVault.jsx
src/components/Browser/: AutoUpdater.jsx  BrowserChrome.jsx  CommandPalette.jsx  NewTabPage.jsx  OmniboxDropdown.jsx  Sidebar.jsx  StatusBar.jsx  TabBar.jsx  TabItem.jsx  TitleBar.jsx  Toolbar.jsx  UniversalViewer.jsx  WebContent.jsx
src/components/DevTools/: DevToolsPanel.jsx
src/stores/: browserStore.js
src/styles/: globals.css
