[package]
name        = "taby"
version     = "1.0.0"
description = "Taby Browser"
authors     = ["Taby Team"]
edition     = "2021"
rust-version = "1.77"

[[bin]]
name = "taby"
path = "src/main.rs"

[lib]
name       = "taby_lib"
path       = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-fs           = "2"
tauri-plugin-http         = "2"
tauri-plugin-shell        = "2"
tauri-plugin-store        = "2"
tauri-plugin-notification = "2"
tauri-plugin-process      = "2"
tauri-plugin-dialog       = "2"

# Desktop-only: updater not available on mobile (handled via app stores)
tauri-plugin-updater      = { version = "2", optional = true }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"], default-features = false }
zip         = { version = "2", default-features = false, features = ["deflate"] }
uuid        = { version = "1", features = ["v4"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
num_cpus    = "1"
log         = "0.4"
env_logger  = "0.11"
chrono      = { version = "0.4", features = ["serde"] }

# Security: Argon2id password hashing
argon2      = "0.5"
rand        = "0.8"

[features]
default          = ["custom-protocol", "updater"]
custom-protocol  = ["tauri/custom-protocol"]
# updater feature enables tauri-plugin-updater for desktop builds
updater          = ["tauri-plugin-updater"]

# Mobile builds override default — no updater, no tray
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri = { version = "2", features = ["image-ico", "image-png"] }

[profile.dev]
incremental = true

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
